--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,21 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body {
+  color: var(--foreground, #171717);
+  background: var(--background, #ffffff);
+  font-family: Arial, Helvetica, sans-serif;
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
-.dark {
+[data-theme='dark'] {
   --background: #121212;
   --foreground: #ededed;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  transition: background-color 0.5s ease, color 0.5s ease;
+[data-theme='light'] {
+  --background: #ffffff;
+  --foreground: #171717;
 }
 
 @layer utilities {
