--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,6 +55,18 @@ h1 {
   color: var(--text-primary);
 }
 
+h2 {
+  font-size: 1.75rem;
+  font-weight: 700;
+  color: var(--text-primary);
+}
+
+h3 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  color: var(--text-primary);
+}
+
 p {
   font-size: 1rem;
   line-height: 1.5;
